@@ -5,6 +5,7 @@ S3method(as.data.frame,phylo)
 S3method(fortify,beast)
 S3method(fortify,codeml_mlc)
 S3method(fortify,jplace)
+S3method(fortify,paml_rst)
 S3method(fortify,phylo)
 S3method(fortify,phylo4)
 export("%<%")
