@@ -1,14 +1,19 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/codeml_mlc.R
+% Please edit documentation in R/AllGenerics.R, R/codeml_mlc.R, R/paml_rst.R
 \docType{methods}
 \name{plot}
 \alias{plot}
 \alias{plot,codeml_mlc,ANY-method}
+\alias{plot,paml_rst,ANY-method}
 \title{plot method}
 \usage{
 \S4method{plot}{codeml_mlc,ANY}(x, layout = "phylogram",
   branch.length = "branch.length", show.tip.label = TRUE,
   position = "branch", annotation = "dN/dS", ndigits = 2, ...)
+
+\S4method{plot}{paml_rst,ANY}(x, layout = "phylogram",
+  show.tip.label = TRUE, position = "branch",
+  annotation = "marginal_subs", ...)
 }
 \arguments{
 \item{x}{object}
